# Floorp-Sapphillon-Plugins

./: Cargo.toml
api-spec/: openapi.yaml
floorp/: Cargo.toml  README.md
floorp/generated-client/: Cargo.toml  README.md
floorp/generated-client/.openapi-generator/: FILES
floorp/generated-client/docs/: AttachRequest.md  AttachResponse.md  BrowserContext.md  CreateInstanceResponse.md  CreateTabInstanceRequest.md  DefaultApi.md  Download.md  ExecuteScriptRequest.md  ExistsResponse.md  FillFormRequest.md  FoundResponse.md  HealthResponse.md  HistoryItem.md  HtmlResponse.md  ImageResponse.md  NavigateRequest.md  OkResponse.md  Rect.md  RegionScreenshotRequest.md  SelectorRequest.md  Tab.md  TabEntry.md  TabUriResponse.md  TextResponse.md  UriResponse.md  ValueResponse.md  WaitForElementRequest.md
floorp/generated-client/src/apis/: configuration.rs  default_api.rs
floorp/generated-client/src/models/: attach_request.rs  attach_response.rs  browser_context.rs  create_instance_response.rs  create_tab_instance_request.rs  download.rs  error_response.rs  execute_script_request.rs  exists_response.rs  fill_form_request.rs  found_response.rs  health_response.rs  history_item.rs  html_response.rs  image_response.rs  mod.rs  navigate_request.rs  ok_response.rs  rect.rs  region_screenshot_request.rs  selector_request.rs  tab.rs  tab_entry.rs  tab_uri_response.rs  text_response.rs  uri_response.rs  value_response.rs  wait_for_element_request.rs
floorp/src/: 00_floorp.js
generated-client/: Cargo.toml  README.md
generated-client/src/: lib.rs
src/: 00_floorp.js  lib.rs
(+34 files in other folders)
