[package]
name = "floorp"
version.workspace = true
authors.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
homepage.workspace = true

edition = "2024"

[dependencies]
anyhow.workspace = true
log.workspace = true
deno_core.workspace = true
deno_error.workspace = true
sapphillon_core.workspace = true
ureq = "3.1.0"
serde_json = "1.0"
base64 = "0.22"
openapi = { path = "generated-client" }
tokio = { version = "1", features = ["rt","rt-multi-thread","macros","time"] }
once_cell = "1.19"

[dev-dependencies]
httpmock = "0.6"
